# eveskinserver

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  app.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci-cd.yaml
eveskinserver/: __init__.py  app.py
eveskinserver/ccp_data/sde/: skinLicense.csv  skins.csv
eveskinserver/templates/: index.html
gunicorn/: supervisor.conf  wsgi.py
tests/: test_all.py  test_app.py  tests.py
